package com.randioo.doudizhu_server.protocol;

message RoleData{
	optional int32 roleId = 1;
	optional string name = 2;
	optional int32 money = 3;
	optional int32 volume = 4;
	optional int32 musicVolume = 5;
	optional string headImgUrl = 6;
	optional int32 randiooMoney = 7;
	optional int32 roomCards = 8 ; //房卡
}

message GameConfig{
	optional int32 round = 1;
	optional int32 di = 2;
	optional bool huangFang = 3;//荒番
	optional bool mingpai = 4;
}
message PaiNum{
	optional int32 seated = 1;
	optional int32 num = 2;
}

message Record{
	optional int32 seated = 1;
	repeated int32 pai = 2;
}

enum GameType{
	GAME_TYPE_MATCH = 1;
	GAME_TYPE_FRIEND = 2;
}

message GameRoleData{
	optional string gameRoleId = 1;
	optional string name = 2;
	optional int32 seated = 3;
	optional bool ready = 4;
	optional string headImgUrl = 5;
	optional int32 money = 6;
	optional int32 id = 7;
	optional int32 sex = 8;
	optional string account = 9 ; //平台account
}

enum GameState{
	GAME_STATE_PREPARE = 1;
	GAME_START_START = 2;
	GAME_START_END = 3;
}

message video{	
	repeated bytes videoRecord = 1;
	repeated int32 keyPoint = 2;
	repeated bytes roundOver = 3;
	optional bytes gameOver = 4;
	repeated string startTime = 5;
	optional int32 gameType = 6;
	optional string roomId = 7;
}

message videoWithId{
	optional video videoMsg = 1;
	optional int32 videoId = 2;
	optional int32 roleId = 3;
}

enum FightVoteApplyExit{
	VOTE_IDLE = 0;
	VOTE_AGREE = 1;
	VOTE_REJECT = 2;
}
message RecommandPai{
		repeated int32 pai = 1; 
}
message gameRolePlayData{
		optional GameRoleData gameRoleData = 1;
		optional int32 allScore = 2;
		optional int32 paiNum = 3;
		optional int32 callLandlordScore = 4;
		optional bool isFarmer = 5;
		optional bool isAuto = 6;
		optional bool isOnline = 7;
}
message Score{
		optional string name = 1;
		optional int32 score = 2;
		optional int32 allScore = 3;
		optional int32 seated = 4;
		optional int32 money = 5;
		repeated int32 pai = 6;
	}
message GameOverData{
		optional string name = 1;
		optional int32 landLordNum = 2;
		optional int32 farmerNum = 3;
		optional int32 score = 4;
		optional int32 seated = 5;
		optional string headImgUrl = 6;
		optional int32 roleId = 7;
	}
	
message RoundVideoData{	
	repeated bytes sc = 1;
}
message RoleInfo{
      optional int32 roleId =1  ;  
      optional int32 seat = 2 ; //位置
}
message Cards{
	repeated int32 card = 1; //牌
}